--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,12 @@
     "license": "MIT",
     "keywords": [
         "php",
-        "hyperf"
+        "hyperf",
+        "梦网",
+        "梦网短信",
+        "短信"
     ],
-    "description": "",
+    "description": "梦网短信SDK",
     "autoload": {
         "psr-4": {
             "KY\\MontnetsSmsClient\\": "src/"
@@ -18,7 +21,8 @@
         }
     },
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "overtrue/easy-sms": "^2.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
